Refactored raindance sammba integration to easily separate it with the new samba for file storage. Updated minor spelling mistakes, updated tests to use assertj's assert lib.